test/negative/StaticFinalMethod.java
public class StaticFinalMethod {
    static final void f() {
    }
}
